--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://dnlmatos.github.io/simpleCounter/css/style.css">
+    <link href="https://dnlmatos.github.io/simpleCounter/css/style.css" rel="stylesheet" />
+    <script src="https://dnlmatos.github.io/simpleCounter/js/main.js"></script>
 </head>
 <body onclick="funcaoContador()">
     <section >
@@ -18,7 +19,6 @@
                 <button class="incrementar">Incrementar</button>
             </div>
         </div>
-    </section>
-    <script src="https://dnlmatos.github.io/simpleCounter/js/main.js"></script>
+    </section> 
 </body>
 </html>
